style.css
  #top {
    text-align: center;
    color: white;
    background-color: #7CC8C7;
    padding:10px;
  }

  body {
    margin: 0;
    padding: 0;
  }

  footer {
    position: fixed;
    left: 0;
    bottom: 0;
    height: 20px;
    width: 100%;
    background-color: #169496;
    color: white;
    text-align: left;
  }

  #footerRight {
    text-align: right;
  }

  ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #169496;
}

li {
  float: left;
}

li a, .dropbtn {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover, .dropdown:hover .dropbtn {
  background-color: #298284;
}

li.dropdown {
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

.dropdown-content a:hover {background-color: #f1f1f1;}

.dropdown:hover .dropdown-content {
  display: block;
}
#Profile {
    text-align: right;
}

/* Div that contains buttons for rock paper scissors */
#rockpaperscissors {
  text-align: center;
}

/* Div that contains message output for rock paper scissors */
#rpsMessage {
  text-align: center;
  visibility: hidden;
}

.modal {
  display: block; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 30%; /* Could be more or less, depending on screen size */
  height: 45%;
}

/* The Close Button */
.close,
.restart {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  padding-left: 15px;
}


.close:hover,
.close:focus,
.restart:hover,
.restart:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

